--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@ant-design/icons": "^6.1.0",
     "@ant-design/nextjs-registry": "^1.3.0",
     "@hookform/resolvers": "^3.3.4",
     "@phosphor-icons/react": "^2.1.10",
     "@sentry/nextjs": "^10.32.1",
     "@tanstack/react-query": "^4.26.1",
     "@tanstack/react-query-devtools": "^4.36.1",
+    "antd": "^6.1.2",
     "axios": "^1.13.2",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.26",
     "husky": "^8.0.3",
     "import-in-the-middle": "^2.0.1",
     "next": "16.0.10",
@@ -25,9 +28,11 @@
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "react-hook-form": "^7.50.1",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "require-in-the-middle": "^8.0.1",
     "sonner": "^2.0.7",
+    "sweetalert2": "^11.26.17",
     "tailwind-merge": "^3.4.0",
     "zod": "^3.22.4",
     "zustand": "^5.0.9"
