--- a/package.json
+++ b/package.json
@@ -17,12 +17,16 @@
     "@sentry/nextjs": "^10.32.1",
     "@tanstack/react-query": "^4.26.1",
     "@tanstack/react-query-devtools": "^4.36.1",
+    "@uidotdev/usehooks": "^2.4.1",
+    "@vidstack/react": "^1.12.12",
     "antd": "^6.1.2",
+    "aos": "^2.3.4",
     "axios": "^1.13.2",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.26",
     "husky": "^8.0.3",
     "import-in-the-middle": "^2.0.1",
+    "moment-timezone": "^0.6.0",
     "next": "16.0.10",
     "next-themes": "^0.4.6",
     "react": "19.2.1",
@@ -30,15 +34,20 @@
     "react-hook-form": "^7.50.1",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
+    "react-loader-spinner": "^8.0.0",
+    "react-player": "^3.4.0",
+    "react-youtube": "^10.1.0",
     "require-in-the-middle": "^8.0.1",
     "sonner": "^2.0.7",
     "sweetalert2": "^11.26.17",
+    "swiper": "^10.3.1",
     "tailwind-merge": "^3.4.0",
     "zod": "^3.22.4",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/aos": "^3.0.7",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
