--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,7 +30,8 @@
     ".next/types/**/*.ts",
     ".next/dev/types/**/*.ts",
     "**/*.mts",
-    "components/layouts/Footer"
+    "components/**/*.ts",
+    "components/**/*.tsx"
   ],
   "exclude": ["node_modules"]
 }
