--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@tanstack/react-query": "^4.26.1",
     "@tanstack/react-query-devtools": "^4.36.1",
     "@uidotdev/usehooks": "^2.4.1",
-    "@vidstack/react": "^1.12.12",
+    "@vidstack/react": "^1.12.13",
     "antd": "^6.1.2",
     "antd-style": "^4.1.0",
     "aos": "^2.3.4",
@@ -28,10 +28,12 @@
     "husky": "^8.0.3",
     "import-in-the-middle": "^2.0.1",
     "lodash": "^4.17.23",
+    "media-icons": "^1.1.5",
     "moment-timezone": "^0.6.0",
     "next": "16.0.10",
     "next-themes": "^0.4.6",
     "react": "19.2.1",
+    "react-adsense": "^0.1.0",
     "react-dom": "19.2.1",
     "react-hook-form": "^7.50.1",
     "react-hot-toast": "^2.6.0",
@@ -52,9 +54,11 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/aos": "^3.0.7",
+    "@types/lodash": "^4.17.23",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/video-react": "^0.15.8",
     "eslint": "^9",
     "eslint-config-next": "16.0.10",
     "tailwindcss": "^4",
